force-app/main/default/objects/Create_Cart__c/Create_Cart__c.object-meta.xml
<CustomObject>
    <label>Create Cart</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Create Cart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Create Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>