force-app/main/default/objects/Create_Cart__c/fields/autooff__c.field-meta.xml
<CustomField>
    <fullName>autooff__c</fullName>
    <displayFormat>Comnm-{00000}</displayFormat>
    <label>autooff</label>
    <type>AutoNumber</type>
</CustomField>