force-app/main/default/objects/Create_Cart__c/fields/autoon__c.field-meta.xml
<CustomField>
    <fullName>autoon__c</fullName>
    <displayFormat>Comme-{00000}</displayFormat>
    <label>autoon</label>
    <type>AutoNumber</type>
</CustomField>