force-app/main/default/objects/Create_Cart__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Create Carts</relationshipLabel>
    <relationshipName>Create_Carts</relationshipName>
    <type>Lookup</type>
</CustomField>