force-app/main/default/objects/Create_Cart__c/fields/sfid__c.field-meta.xml
<CustomField>
    <fullName>sfid__c</fullName>
    <displayFormat>Comma-{00000}</displayFormat>
    <label>sfid</label>
    <type>AutoNumber</type>
</CustomField>