force-app/main/default/objects/Create_Cart__c/fields/uid__c.field-meta.xml
<CustomField>
    <fullName>uid__c</fullName>
    <displayFormat>Comam-{00000}</displayFormat>
    <label>uid</label>
    <type>AutoNumber</type>
</CustomField>